style.css
* {
  padding: 0px;
  margin: 0px;
  box-sizing: border-box;
  font-family: 'Epilogue', sans-serif;
}

:root {
  --color-172339: #172339;
  --color-49566D: #49566D;
  --color-CB30E3: #CB30E3;
  --color-FFA84E: #FFA84E;
  --color-F3EDE7: #F3EDE7;
  --color-A060FF: #A060FF;
  --color-FAF8F6: #FAF8F6;
  --color-gradiant:  linear-gradient(135deg, #A060FF 0%, #CB30E3 49.21%, #FFA84E 100%);
}




/*************** MEDIA QUERIES **************/

/* Desktop View */
@media screen and (min-width: 1024px) {
  .body-wrapper-1 {
    padding: 0rem 3rem;
    margin-top: -5rem;
  }

  .tryone {
    display: grid !important;
    grid-template-columns: 1fr 1fr 1fr !important;
    gap: 1rem;
  }

  .newone {
    position: relative;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    align-items: flex-start;
    margin: auto 0rem;
  }

  .curved1 {
    position: absolute;
    width: 17rem !important;
    left: 28.5rem !important;
    top: 10.5rem !important;
  }

  .bodyheadtext {
    position: absolute;
    top: -2rem;
    font-size: 5rem !important;
    font-weight: 700;
    width: 46rem !important;
    line-height: 5rem !important;
    z-index: 1;
  }

  .subtext {
    margin-top: 10rem;
    font-style: normal;
    font-size: 1.5rem !important;
    line-height: 2.9rem !important;
  }

  .bodybeta {
    position: absolute;
    margin-top: 5rem;
  }

  .img-portrait1 {
    display: block !important;
  }

  .img-landscape {
    display: none !important;
  }

  .ratings {
    display: none !important;
  }

  .ratings2 {
    margin: auto 0rem;
    display: flex !important;
    flex-direction: column;
    justify-content: center;
    align-content: center;
    gap: 2rem !important;
  }

  .bodycontainer2 {
    display: grid !important;
    grid-template-columns: 1fr 1fr 1fr !important;
    gap: 1rem;
    padding: 3rem 5rem; 
    z-index: 2 !important;
  }

  .image2{
    position: absolute;
    left: 8rem;
    top: -8rem;
    width: 25rem !important;
  }

  .curvepng2 {
    text-align: center;
    margin-top: -10rem !important;
  }

  .textbox2{
    text-align: left !important;
    display: flex;
    flex-direction: column;
    justify-content: flex-start !important;
    align-items: flex-start !important;
    gap: 2rem;
    margin-top: 3rem !important;
  }

  .headbodytext2 {
    font-size: 3rem !important;
  }

  .textsub1 {
    text-align: left !important;
    font-size: 1.2rem !important;
  }

  .bottomtext{
    text-align: left !important;
    margin-bottom: 1.7rem !important;
  }

  .secondbottom{
    text-align: left;
  }

  .footer {
    position: absolute;
    width: 100%;
    top: 80rem;
    height: 30rem !important;
    z-index: -1 !important;
    display: flex;
    justify-content: center;
    align-items: center;
  }

  .footercontainer {
    position: absolute;
    top: 25rem;
    display: flex;
    flex-direction: row !important;
    justify-content: space-between;
    align-items: center;
    gap: 2rem;
  }
}


/* Tablet View */
@media screen and (min-width: 768px)
 and (max-width: 1024px){ 
  /* header start */
  .header-wrapper {
    width: 100%;
  }

  .navbarcontainer {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .navbeta {
    background: var(--color-FAF8F6);
    color: var(--color-172339);
    border: 1px solid var(--color-172339);
  }
  
  .logoname {
    color: var(--color-172339);
    font-style: normal;
    font-weight: 700;
    font-size: 32px;
    line-height: 32px;
  }
  
  .request-beta{
    font-style: normal;
    font-weight: 700;
    font-size: 16px;
    line-height: 32px;
    letter-spacing: -0.16px;
    padding: 0.1rem 1rem;
    border-radius: 0.3rem;
  }

  .bodybeta {
    background-color: var(--color-172339);
    color: var(--color-F3EDE7);
    width: 250px !important;
    padding: 0rem;
    border: none;
  }

  .text-ratings-wrapper {
    display: flex !important;
    position: relative;
  }

  .curved1 {
    position: absolute;
    top: 9rem !important;
    left: 19rem !important;
    width: 17.5rem !important;
  }

  .tryone {
    display: flex;
    justify-content: space-around !important;
    box-sizing: border-box !important;
    margin: 0px !important;
  }

  .newone {
    margin-top: 15rem;
    height: 15rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 3rem;
  }

  .text-box {
    width: fit-content !important;
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 3rem;
  }

  
  .bodyheadtext {
    position: absolute;
    font-style: normal;
    font-weight: 700;
    font-size: 70px !important;
    line-height: 64px !important;
    width: 42rem !important;
    top: 11rem;
  }

  .subtext {
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 32px;
    color: var(--color-49566D);
  }

  .img-landscape{
    display: none !important;
  }

  .img-portrait1 {
    display: block !important;
  }

  .ratings {
    display: flex;
    flex-direction: row !important;
    justify-content: space-around !important;
    justify-items: center;
    align-items: center;
    width: 100% !important;
  }

  .big-rating {
    font-style: normal;
    font-weight: 700;
    font-size: 48px;
    color: var(--color-172339);
    text-transform: uppercase;
  }

  .small-rating {
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    color: var(--color-49566D);
    text-transform: uppercase;
  }
  /* ------------------------------------------ */

  /* body wrapper 2 start */
  .bodycontainer2{
    position: absolute;
    z-index: 2 !important;
  }
.image2 {
  position: absolute;
  width: 15rem;
  margin: 0rem 7rem !important;
}

.textbox2 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 3.5rem !important;
    padding: 0rem 2rem;
}

.headbodytext2 {
  font-style: normal;
  font-weight: 400;
  font-size: 48px;
  line-height: 56px;
}

.textbold {
  font-style: bold;
  font-weight: 700;
}

.textsub1{
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 35px;
}

.bottomtext {
  margin: 0rem 0rem;
}

.firtbottom {
  font-style: normal;
  font-weight: 700;
  font-size: 18px;
  line-height: 32px;
}

.secondbottom {
  font-style: normal;
  font-weight: 400;
  font-size: 16px;
  line-height: 26px;
  letter-spacing: 2.5px;
}

/* body wrapper 2 end */

/* footer start */
.footer {
  background-color: var(--color-F3EDE7); 
  position: absolute;
  top: 90rem;
  display: flex;
  justify-content: center;
  align-items: center;
  height: 50rem !important;
  width: 100%;
  z-index: -1 !important;
}

.footercontainer {
  position: absolute;
  top: 45rem !important;
  display: flex !important;
  flex-direction: row !important;
  justify-content: space-between !important;
}

.footericons {
  gap: 2rem;
}

.logofooter {
  font-size: 32px;
  font-weight: 700;
  line-height: 32px;
  text-align: left;
  color: var(--color-172339);
}

.copywright {
  color: var(--color-49566D);
  font-style: normal;
  font-weight: 400;
  font-size: 15px;
  line-height: 32px;
}
/* footer end */
}


/**************** mobile or default view ***************/
  .header-wrapper {
    width: 100%;
    padding: 0rem 1rem;
  }

  .navbarcontainer {
    display: flex;
    justify-content: space-between;
    align-items: center;
  }

  .logoname {
    font-style: normal;
    font-weight: 700;
    font-size: 32px;
    color: var(--color-172339);
  }

  .navbeta {
    background: var(--color-FAF8F6);
    color: var(--color-172339);
    border: 1px solid var(--color-172339);
  }

  .navbeta:hover {
    background-color: var(--color-172339);
    color: var(--color-FAF8F6);
  }

  .body-wrapper-1 {
    margin-bottom: 280px;
  }

  .text-box {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;
  }

  .bodyheadtext{
    font-style: normal;
    font-weight: 400;
    font-size: 50px;
    line-height: 44px;
    width: 450px;
    height: 89px;
    text-align: left;
    line-height: 44px;
    letter-spacing: -0.527778px;
  }

  .boldtext {
    font-weight: 700;
  }

  .subtext {
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 24px;
    letter-spacing: -0.527778px;
    width: 460px;
    text-align: left;
  }

  .request-beta{
    font-style: normal;
    font-weight: 700;
    font-size: 16px;
    line-height: 32px;
    letter-spacing: -0.16px;
    padding: 0.1rem 1rem;
    border-radius: 0.3rem;
  }

  .bodybeta {
    background-color: var(--color-172339);
    color: var(--color-F3EDE7);
    width: 300px;
    padding: 0.5rem 0rem;
    border: none;
  }

  .bodybeta:hover {
    background: var(--color-gradiant);
  }

  .text-ratings-wrapper {
    margin: 0.5rem auto auto auto;
    display: flex;
    justify-content: center;
    flex-direction: column;
  }

  .imagebox {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 4rem;
  }

  .curved1 {
    position: absolute;
    left: 215px;
    width: 10rem;
    top: 8rem;
  }

  .img-portrait1 {
    display: none;
  }

  .img-landscape {
    display: block;
  }

  .ratings {
    display: flex;
    justify-content: stretch;
    flex-direction: column;
    align-items: center;
    margin-top: 2rem;
  }

  .ratings2 {
    display: none;
  }

  .text-number-rating > p {
    text-align: center;
  }

  .big-rating {
    font-style: normal;
    font-weight: 700;
    font-size: 48px;
    color: var(--color-172339);
    text-transform: uppercase;
  }
  
  .small-rating {
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    color: var(--color-49566D);
    text-transform: uppercase;
  }

  .body-wrapper-2{
    background-color: var(--color-172339);
  }

  .bodycontainer2 {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    gap: 3.5rem;
    position: relative;
  }

  .image2 {
    position: absolute;
    left: 8rem;
    top: -8rem;
    width: 13rem;
  }

  .curvepng2{
    margin-top: 14rem;
  }

  .textbox2 {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 2rem;
  }

  .headbodytext2 {
    font-style: normal;
    font-weight: 400;
    font-size: 40px;
    line-height: 48px;
  }

  .textsub1{
    font-style: normal;
    font-weight: 400;
    font-size: 18px;
    line-height: 32px;
    letter-spacing: 0.09px;
    text-align: center;
  }

  .bottomtext {
    text-align: center;
    margin-bottom: 5rem;
  }

  .firtbottom {
    font-style: normal;
    font-weight: 700;
    font-size: 18px;
    line-height: 32px;
  }

  .secondbottom {
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 26px;
    letter-spacing: 2.5px;
  }

  .footer {
    background-color: var(--color-F3EDE7);
    padding: 5rem 0rem;
  }

  .footercontainer {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 2rem;
  }

  .logofooter {
    font-size: 32px;
    font-weight: 700;
    line-height: 32px;
    letter-spacing: -0.4444444477558136px;
    text-align: left;
    color: var(--color-172339);
  }

  .footericons {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 2rem;
  }

